WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247316
AX ITM: Fix for LayoutTests/accessibility/svg-remote-element.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=247316
Summary
AX ITM: Fix for LayoutTests/accessibility/svg-remote-element.html in isolated...
Andres Gonzalez
Reported
2022-11-01 06:59:13 PDT
Currently timing out in ITM.
Attachments
Patch
(24.16 KB, patch)
2022-11-01 07:12 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(24.36 KB, patch)
2022-11-01 18:43 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(25.62 KB, patch)
2022-11-02 05:09 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(25.64 KB, patch)
2022-11-02 11:44 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-01 06:59:23 PDT
<
rdar://problem/101804648
>
Andres Gonzalez
Comment 2
2022-11-01 07:12:58 PDT
Created
attachment 463343
[details]
Patch
Tyler Wilcock
Comment 3
2022-11-01 09:54:18 PDT
Comment on
attachment 463343
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=463343&action=review
Would objects outside the main-document for other reasons (e.g. they're in an iframe) have the same problem that SVG objects do?
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:336 > + AXLOG("Bail out here, we can't build an isolated tree branch rooted at a detached object.");
If we're changing this comment to a log, the "Bail out here" portion doesn't have the same context. Maybe it should instead saying something like: "collectNodeChangesForSubtree bailing for object ID %s because it is detached"
Andres Gonzalez
Comment 4
2022-11-01 18:43:18 PDT
Created
attachment 463356
[details]
Patch
Andres Gonzalez
Comment 5
2022-11-01 18:49:49 PDT
(In reply to Tyler Wilcock from
comment #3
)
> Comment on
attachment 463343
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=463343&action=review
> > Would objects outside the main-document for other reasons (e.g. they're in > an iframe) have the same problem that SVG objects do?
I think iframes documents share the same top document with the main document, so it wouldn't have the same problem.
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:336 > > + AXLOG("Bail out here, we can't build an isolated tree branch rooted at a detached object."); > > If we're changing this comment to a log, the "Bail out here" portion doesn't > have the same context. Maybe it should instead saying something like: > > "collectNodeChangesForSubtree bailing for object ID %s because it is > detached"
Removed that part of the log message. It is clear in the log that this message is in the scope of this method.
Andres Gonzalez
Comment 6
2022-11-02 05:09:22 PDT
Created
attachment 463360
[details]
Patch
chris fleizach
Comment 7
2022-11-02 09:55:20 PDT
Comment on
attachment 463360
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=463360&action=review
> Source/WebCore/accessibility/AXObjectCache.cpp:799 > + RefPtr object = createObjectFromRenderer(renderer);
we don't need the type of the RefPtr anymore?
> Source/WebCore/accessibility/AccessibilitySVGElement.cpp:51 > + ASSERT(renderer);
can we ASSERT(cache) here too
Andres Gonzalez
Comment 8
2022-11-02 11:44:00 PDT
Created
attachment 463367
[details]
Patch
Andres Gonzalez
Comment 9
2022-11-02 11:47:00 PDT
(In reply to chris fleizach from
comment #7
)
> Comment on
attachment 463360
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=463360&action=review
> > > Source/WebCore/accessibility/AXObjectCache.cpp:799 > > + RefPtr object = createObjectFromRenderer(renderer); > > we don't need the type of the RefPtr anymore?
No, compiler magic inference.
> > > Source/WebCore/accessibility/AccessibilitySVGElement.cpp:51 > > + ASSERT(renderer); > > can we ASSERT(cache) here too
Done.
EWS
Comment 10
2022-11-02 17:17:13 PDT
Committed
256261@main
(c98a2ded1d00): <
https://commits.webkit.org/256261@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463367
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug